Remove unused optionals. Improve readability